--- a/style.css
+++ b/style.css
@@ -27,22 +27,58 @@ li{
 .logo{
     color: white;
     font-weight: 700;
-    
 }
 .header-link-container{
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    
 }
 .list{
     display: flex;
     padding-inline-start: 0px;
     justify-content: center;
+}
+.hero-container{
+    display: flex;
+    flex-wrap: nowrap;
+    height: 70vh;
+}
+.left-hero,.right-hero{
+    flex: 1;
+}
+.left-hero{
+    background-color: burlywood;
+    display: flex;
+    background-color: #1F2937;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
     
-
-    
-    
+}
+.left-hero-container{
+    margin-right: 60px;
+}
+.hero-strong-text{
+    color: #F9FAF8;
+    width: 350px;
+    font-size: 48px;
+    font-weight: bolder;
+}
+.hero-text{
+    font-size: 18px;
+    color: #E5E7EB;
+    width: 370px;
+}
+.hero-signup-button{
+    width: 120px;
+    height: 30px;
+    margin-top: 10px;
+    color: white;
+    background-color: #3882F6;
+    border: none;
+    border-radius: 12px;
+}
+.right-hero{
+    background-color: cadetblue;
 }
