--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@ li{
     align-items: center;
 }
 .logo{
-    color: white;
-    font-weight: 700;
+    color: #F9FAF8;
+    font-size: 24px;
+
 }
 .header-link-container{
     flex: 1;
@@ -41,7 +42,7 @@ li{
 }
 .hero-container{
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     height: 70vh;
 }
 .left-hero,.right-hero{
@@ -80,5 +81,14 @@ li{
     border-radius: 12px;
 }
 .right-hero{
-    background-color: cadetblue;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.right-hero-picture{
+    width: 400px; 
+    height: 250px;
+    background-color: grey;
+    margin-left: 60px;
 }
