--- a/style.css
+++ b/style.css
@@ -131,3 +131,27 @@ li{
     color: black;
     margin-top: 5px;
 }
+.quote-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+    height: 50vh;
+}
+.container-container{
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    width: 660px;
+}
+.quote{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1F2937;
+}
+.god{
+    align-self: flex-end;
+    font-weight: bold;
+    margin-top: 10px;
+}
